First_Step/data/45/262/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Executable.java:10: error: ';' expected
    Tools sortBubble(int[]tab);
                    ^
Executable.java:10: error: ';' expected
    Tools sortBubble(int[]tab);
                             ^
2 errors
Not compiled
--|>
Grade :=>>0.00000
